Structural and naming overhaul - all files adhere to a kebab-case format - change all folder names in the following way: 	- order by time 	- topic included - remove unecessary gitignore rules - minor updates to the  Readme.md file - rename exercise files in the following way: 	- no longer include the redundant word 'exercises' 	- identify by day number

--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ dmypy.json
 
 
 # documents
-*.pdf
+# *.pdf  # used in certain cases for exercises descriptions.
 *.doc
 *.docx
 
@@ -147,6 +147,4 @@ dmypy.json
 *.thumbs.db
 
 # user
-notes/
-templates/
-utils/
+
